--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:oQP45w07FHMNED3N2tBXrKdB0bI99p+AbJCI4QpHW1E=
+APP_KEY=base64:z5hm6m7evTxuIhDzdh7yxTi+q3cWk3L3zHxuWNXSvoU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=laravel_zcms
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
